src/objects/RMACTION__c.object
<CustomObject>
    <description>MRI RMAction records</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RMActions</relationshipLabel>
        <relationshipName>RMActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActCode__c</fullName>
        <label>Action Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActDate__c</fullName>
        <label>Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActDescription__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_Do_not_use__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not used in production, but is referenced in Visualforce. This is by design. JKN 040611</description>
        <label>Community (Do not use)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RMActions (Community (Do not use))</relationshipLabel>
        <relationshipName>RMActions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guest_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest Card</label>
        <referenceTo>Guest_Card__c</referenceTo>
        <relationshipLabel>RMActions</relationshipLabel>
        <relationshipName>RMActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMActionID__c</fullName>
        <externalId>true</externalId>
        <label>RMAction ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RMAction</label>
    <listViews>
        <fullName>Main</fullName>
        <columns>ActCode__c</columns>
        <columns>RMActionID__c</columns>
        <columns>Account__c</columns>
        <columns>ActDate__c</columns>
        <columns>ActDescription__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Main</label>
    </listViews>
    <listViews>
        <fullName>RM_actions_appointments_only</fullName>
        <columns>NAME</columns>
        <columns>Guest_Card__c</columns>
        <columns>ActDate__c</columns>
        <columns>ActDescription__c</columns>
        <columns>ActCode__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>RM actions-created today</label>
        <sharedTo>
            <group>SystemAdministrators</group>
            <group>UserAdministrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>RMACTION Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMActions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>